--- a/MSM-E11 - Student-Teacher Ratios.ipynb
+++ b/MSM-E11 - Student-Teacher Ratios.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis by David White"
+    "# Exploratory Data Analysis"
    ]
   },
   {
@@ -42,6 +42,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Author:** David White"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Contact:** david@msmdesign.nyc | [msmdesign.nyc](https://msmdesign.nyc/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Acknowledgements:** NYC Open Data [https://opendata.cityofnewyork.us/]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Language:** Python"
    ]
   },
@@ -49,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Contact:** david@msmdesign.nyc"
+    "**Libraries Used:** NumPy, pandas, matplotlib, seaborn "
    ]
   },
   {
@@ -71,9 +92,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Data Source: The City of New York** https://opendata.cityofnewyork.us/\n",
+    "**Data Source: City of New York 2018-19 Preliminary Class Size Report - School Pupil-to-Teacher Ratio**\n",
     "\n",
-    "Dataset Name: 2018-19 Preliminary Class Size Report School Pupil-to-Teacher Ratio\n",
     "Agency Name: Department of Education (DOE)\n",
     "Update Frequency: Annually\n",
     "Dataset Description: Pupil-to-Teacher Ratio by school\n",
