--- a/MSM_E29_Summary_Statistics_TAP.ipynb
+++ b/MSM_E29_Summary_Statistics_TAP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MSM-E29-Summary-Statistics-TAP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMI/L1u+xEsBVJbr2X7QtTB",
+      "authorship_tag": "ABX9TyMovJ+o1mlnPWB1KQiQWXmv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "id": "dhaS183ApOUN"
       },
       "source": [
-        "Catalogue Number: MSM-E23\n",
+        "Catalogue Number: MSM-E29\n",
         "\n",
         "Author: David White\n",
         "\n",
@@ -52,7 +52,7 @@
         "\n",
         "Language: Python\n",
         "\n",
-        "Libraries Used: NumPy, pandas, matplotlib, seaborn"
+        "Libraries Used: NumPy, pandas"
       ]
     },
     {
@@ -90,7 +90,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
         "\n",
         "data = pd.read_csv(\"https://raw.githubusercontent.com/davidwhitemsm/selected-open-datasources/master/MSM-DS38-Tuition_Assistance_Program__TAP__Fall_Headcount_By_College__Sector_Group__and_Level_of_Study___Beginning_2000.csv\")"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +249,7 @@
       "source": [
         "data.columns"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
       "source": [
         "data.info()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +316,7 @@
         "\n",
         "data_2019 = data[data['Academic Year'] == 2019]"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -336,7 +336,7 @@
       "source": [
         "level = data_2019.groupby('TAP Level of Study')"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -351,7 +351,7 @@
       "source": [
         "level['TAP Fall Headcount'].sum()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
       "source": [
         "group['TAP Fall Headcount'].sum()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +426,7 @@
       "source": [
         "sector = data_2019.groupby('Sector Type')"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,7 +441,7 @@
       "source": [
         "sector['TAP Fall Headcount'].sum()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +477,7 @@
       "source": [
         "sector_group = data_2019.groupby('TAP Sector Group')"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -492,7 +492,7 @@
       "source": [
         "sector_group['TAP Fall Headcount'].sum()"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +536,7 @@
         "max_students =data_2019.sort_values(by=['TAP Fall Headcount'],ascending=False)\n",
         "\n"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -552,7 +552,7 @@
       "source": [
         "max_students.head(10)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
