--- a/pre-processing_2018_voter_analysis_csv.ipynb
+++ b/pre-processing_2018_voter_analysis_csv.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "id": "c2e531ae",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "854de879",
    "metadata": {},
    "outputs": [],
@@ -133,13 +133,13 @@
     "# the original file is too large to be stored on GitHub\n",
     "\n",
     "va = pd.read_csv(\n",
-    "    r\"C:\\Users\\david\\Creative Cloud Files\\MSM Client 001 - Mister Shepherd Media LLC\\MSM Design\\github_msm_design\\exploratory-data-analysis\\2018 Voter Analysis\\Voter_Analysis_2008-2018.csv\", \n",
+    "    r\"C:\\Users\\david\\Creative Cloud Files\\MSM Client 001 - Mister Shepherd Media LLC\\MSM Design\\github_msm_design\\exploratory-data-analysis\\2018 Voter Analysis Data\\Voter_Analysis_2008-2018.csv\", \n",
     "    encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "88949e24",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
        "[3 rows x 175 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "id": "ca1fe9ec",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "(4663752, 175)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "ca926219",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
        " 'weights']"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "9dbc181a",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        "56"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "36bd4ed6",
    "metadata": {},
    "outputs": [],
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "id": "a5898c56",
    "metadata": {},
    "outputs": [],
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "id": "9d7312a1",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "[3 rows x 175 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "id": "825c5515",
    "metadata": {},
    "outputs": [],
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "id": "38a7366a",
    "metadata": {},
    "outputs": [
@@ -1048,7 +1048,7 @@
        "204   1.0     NaN     NaN     NaN  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,13 +1075,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "id": "823ac67a",
    "metadata": {},
    "outputs": [],
    "source": [
     "dist32 = dist32_temp2.rename(columns={'random_ID': \"voter_id\",\n",
     "                                      'age':'age_in_2018',\n",
+    "                                      'participation_score_2018': 'participation_score_as_of_2018',\n",
     "                                      'RegistrationYear': 'year_first_registered_to_vote_in_ny',\n",
     "                                      'PoliticalParty.18': 'political_party_in_2018',\n",
     "                                      'ElectionDistrict.18': 'election_district_in_2018',\n",
@@ -1096,14 +1097,14 @@
     "                                      'participated': 'lifetime_number_elections_participated',\n",
     "                                      'GE18': 'voted_in_2018_general_election',\n",
     "                                      'SP2018': 'voted_in_2018_special_election',\n",
-    "                                      'PR0918': 'voted_in_2018_stae_primary_election',\n",
+    "                                      'PR0918': 'voted_in_2018_state_primary_election',\n",
     "                                      'PR0618': 'voted_in_2018_federal_primary_election'}, \n",
     "                             errors=\"raise\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "id": "51fa94d2",
    "metadata": {},
    "outputs": [
@@ -1142,10 +1143,10 @@
        "      <th>community_district_in_2018</th>\n",
        "      <th>lifetime_number_elections_elligble</th>\n",
        "      <th>lifetime_number_elections_participated</th>\n",
-       "      <th>participation_score_2018</th>\n",
+       "      <th>participation_score_as_of_2018</th>\n",
        "      <th>voted_in_2018_general_election</th>\n",
        "      <th>voted_in_2018_special_election</th>\n",
-       "      <th>voted_in_2018_stae_primary_election</th>\n",
+       "      <th>voted_in_2018_state_primary_election</th>\n",
        "      <th>voted_in_2018_federal_primary_election</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1251,20 +1252,20 @@
        "183                       414.0                                   4   \n",
        "204                       409.0                                   1   \n",
        "\n",
-       "     lifetime_number_elections_participated  participation_score_2018  \\\n",
-       "149                                       1                      6.25   \n",
-       "183                                       1                     25.00   \n",
-       "204                                       1                    100.00   \n",
+       "     lifetime_number_elections_participated  participation_score_as_of_2018  \\\n",
+       "149                                       1                            6.25   \n",
+       "183                                       1                           25.00   \n",
+       "204                                       1                          100.00   \n",
        "\n",
        "     voted_in_2018_general_election  voted_in_2018_special_election  \\\n",
        "149                             0.0                             NaN   \n",
        "183                             0.0                             NaN   \n",
        "204                             1.0                             NaN   \n",
        "\n",
-       "     voted_in_2018_stae_primary_election  \\\n",
-       "149                                  0.0   \n",
-       "183                                  0.0   \n",
-       "204                                  NaN   \n",
+       "     voted_in_2018_state_primary_election  \\\n",
+       "149                                   0.0   \n",
+       "183                                   0.0   \n",
+       "204                                   NaN   \n",
        "\n",
        "     voted_in_2018_federal_primary_election  \n",
        "149                                     0.0  \n",
@@ -1272,7 +1273,7 @@
        "204                                     NaN  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
