corrected typo in comments on line 6

--- a/pre-processing_2018_voter_analysis_csv.ipynb
+++ b/pre-processing_2018_voter_analysis_csv.ipynb
@@ -514,7 +514,7 @@
    ],
    "source": [
     "# list all columnns\n",
-    "# there are 175 columns so we will use a for loop to put them into a list reather than using .columns\n",
+    "# there are 175 columns so we will use a for loop to put them into a list rather than using .columns\n",
     "\n",
     "va_cols_temp = va.columns\n",
     "\n",
