--- a/msm_032_exploratory_data_analysis_nyc_demographics_by_community_district.ipynb
+++ b/msm_032_exploratory_data_analysis_nyc_demographics_by_community_district.ipynb
@@ -32,14 +32,28 @@
    "metadata": {},
    "source": [
     "> ### What is Exploratory Data Analysis?\n",
-    "> **Exploratory data analysis (EDA)** is a technique used by data scientists to inspect, characterize and briefly summarize the contents of a dataset. EDA is often the first step when encountering a new or unfamiliar dataset. EDA helps the data scientist become acquainted with a dataset and test some basic assumptions about the data. By the end of the EDA process, some initial insights can be drawn from the dataset and a framework for further analysis or modeling is established.\n"
+    "> **Exploratory data analysis (EDA)** is a technique used by data scientists to inspect, characterize and briefly summarize the contents of a dataset. EDA is often the first step when encountering a new or unfamiliar dataset. EDA helps the data scientist become acquainted with a dataset and test some basic assumptions about the data. By the end of the EDA process, some initial insights can be drawn from the dataset and a framework for further analysis or modeling is established."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Dataset Analyzed:** *NYC Business Acceleration Businesses Served and Jobs Created*\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NYC Demographics by Community District"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dataset Analyzed:** *Demographics by Community District*\n",
     "\n",
     "**About This Dataset:** The list tracks the number of businesses that NYC Business Acceleration has assisted in opening and how many jobs were created by those businesses. Data provided by Department of Small Business Services (SBS), the City of New York: https://data.cityofnewyork.us/Business/NYC-Business-Acceleration-Businesses-Served-and-Jo/9b9u-8989\n",
     "\n",
@@ -57,7 +71,7 @@
     "**Language:** Python\n",
     "\n",
     "\n",
-    "**Libraries Used:** NumPy, pandas, matplotlib\n",
+    "**Libraries Used:** NumPy, pandas, matplotlib, seaborn, statsmodels\n",
     "\n",
     "\n",
     "**EDA Author:** David White\n",
@@ -70,65 +84,544 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **0. Setup the workspace**"
+    "---"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **1. Wrap our heads around what is contained in the dataset**"
+    "## **0. Prepare the workspace**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**First impressions of our dataset:**\n",
+    "### 0.1 Import Python libraries, packages and functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import libraries for data wrangling, aggregate functions and basic descriptive statistics\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
-    "- The dataset is 6 columns wide and 100 rows long\n",
-    "- each row is a business\n",
-    "- The 'a' column contains datetime information\n",
-    "- The dataset contains information from January 1, 1900 through February 2, 2000\n",
+    "# import functions for statistical modeling  \n",
+    "import statsmodels.formula.api as smf\n",
     "\n",
-    "- Our dataset's categorical variables are:\n",
-    "  - 'a'\n",
-    "  - 'b'\n",
-    "  - 'c'\n",
-    "- Our dataset's numeric variables are:\n",
-    "  - 'x'\n",
-    "  - 'y'\n",
-    "  - 'z'\n",
-    "- These columns contain complete information:\n",
-    "  - 'a'\n",
-    "  - 'b'\n",
-    "  - 'c'\n",
-    "- These columns are missing at least some data:\n",
-    "  - 'x'\n",
-    "  - 'y'\n",
-    "  - 'z'"
+    "# import data visualization packages\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **2. Identify and subset the data that's relevant to our research**"
+    "### 0.2 Adjust display options to make plots easier to read and understand"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# specify seaborn styling options\n",
+    "sns.set_theme(\n",
+    "    context='talk', \n",
+    "    style='whitegrid', \n",
+    "    palette='afmhot',\n",
+    "    font='Courier New', \n",
+    "    font_scale=1.15)    \n",
+    "\n",
+    "# allow plots to display inline within the notebook\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 0.3 Set Markdown tables to align-left within notebook cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "table {float:left}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    "table {float:left}\n",
+    "</style>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 0.4 Load the data into the notebook and place it into a staging area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the data from...\n",
+    "\n",
+    "df_temp = pd.read_csv('', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# glimpse\n",
+    "\n",
+    "df_temp.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 0.5. Check the data type of each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# info\n",
+    "\n",
+    "df_temp.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 0.6 Refer to the [data dictionary](https://opendata.cityofnewyork.us/) and make sure that our DataFrame's data types match the source data. Reassign data types where needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cast column to numeric data type\n",
+    "df_socrata['number_of_employees'] = pd.to_numeric(df_socrata['number_of_employees'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cast column to datetime data type\n",
+    "df_socrata['establishment_record_actual_opening_date'] = pd.to_datetime\\\n",
+    "(df_socrata['establishment_record_actual_opening_date'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cast column to categorical data type\n",
+    "df_socrata['establishment_record_establishment_category'] =\\\n",
+    "df_socrata['establishment_record_establishment_category'].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cast column to boolean data type\n",
+    "df['Survived'] = df['Survived'].astype('bool')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cast column to string data type\n",
+    "df['Pclass'] = df['Pclass'].astype('string')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cast column to object data type\n",
+    "df['Pclass'] = df['Pclass'].astype('object')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **1. Describe the characteristics of the dataset**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 How many rows and how many columns are in our dataset?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print the shape of the DataFrame\n",
+    "rows = df_temp.shape[0]\n",
+    "columns = dt_temp.shape[1]\n",
+    "\n",
+    "print(f'There are {rows} rows and {columns} columns in the dataset.'')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Identify the index of our DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 What are the column headings in our dataset?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print a list of the DataFrame's columns\n",
+    "\n",
+    "all_cols = list(df_temp.columns)\n",
+    "print(all_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 What are the data types of each column?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print a concise summary of a the DataFrame\n",
+    "\n",
+    "df_temp.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5 How many null values are in each column?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print number of missing values in each column of the DataFrame\n",
+    "\n",
+    "pd.df_temp.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.6 How many unique values are there in each column?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print count of unique elements in each column\n",
+    "\n",
+    "df_temp.nunique(axis=0, dropna=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **2. Summarize the contents of the dataset**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Summarize the columns containing numerical variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# describe numeric columns only\n",
+    "\n",
+    "df.describe(include=[np.number])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Summarize the columns containing categorical variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# describe categorical columns only\n",
+    "\n",
+    "df.describe(include=['category'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Summarize the columns containing qualitatitive data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# describe string columns only\n",
+    "\n",
+    "df.describe(include=[object])  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **3. Select a subset of data for closer examination**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Select a subset of columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select a subset of columns to examine\n",
+    "slected_cols = []\n",
+    "\n",
+    "demographics = df_temp[selected_cols]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Select a subset of rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select a subset of rows\n",
+    "\n",
+    "# select data by index location\n",
+    "# df3 = df2.iloc[100:111,2:5]\n",
+    "\n",
+    "# select data based on a single condition\n",
+    "# df_females = df.loc[df['Sex']=='female']\n",
+    "# df_minors = df.loc[df['Age']<=18]\n",
+    "\n",
+    "# select data based on multiple conditions\n",
+    "# df_women_and_children = df.loc[(df['Sex']=='female') | (df['Age'] < 18)]\n",
+    "\n",
+    "# select data matching one of a set of values\n",
+    "# step 1 - create a mask\n",
+    "# bridge_and_tunnel = df_socrata['establishment_record_establishment_borough'].isin(['Brooklyn', 'Bronx',\\                                                                                #'Queens', 'Staten Island'])\n",
+    "# step 2 - apply the mask to the original DataFrame\n",
+    "# df_socrata[bridge_and_tunnel]\n",
+    "\n",
+    "# select data matching a substring\n",
+    "# step 1 - cast the column as a string dtype if it is not aslready\n",
+    "# df['Name'] = df['Name'].astype('string')\n",
+    "# step 2 - create a mask\n",
+    "# patricks = df['Name'].str.contains('Patrick')\n",
+    "# step 3 - apply the mask to the original DataFrame\n",
+    "# df[patricks]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. **Describe and summarize the selected subset of data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -141,59 +634,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Let's take a closer look at the following variables:**\n",
-    "\n",
-    "- A\n",
-    "- B\n",
-    "- D\n",
-    "- F"
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **3. Summarize and describe the contents of the dataset**"
+    "## **5. Key takeaways and next steps**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **4. Final takeaways** "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Between 1990 and 2000, a total of 6.5 million homes were sold in NYC. \n",
-    "  - (tell us the scope of the data and the size of the most important metric)\n",
-    "- The average sale price was \\$700,000. \n",
-    "  - (tell us what was typical in the dataset)\n",
-    "- Manhattan had the most expensive homes with an average sale price of \\$2M.  \n",
-    "  - (tell us the outliers)  -OR-  \n",
-    "  - (tell us the highest and lowest groups)\n",
-    "  - (for either option, give us an aggregate value (of the most important metric, above) for the selected subgroup(s).)"
-   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   }
  ],
